--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <div class="resume">
       <div class="container">
         <div class="resume__block">
-          <h1 class="contact-info__header">Bulka</h1>
-          <h3 class="contact-info__sub-header">Senior Hooman Manager</h3>
+          <h1 class="contact-info__header">Yevhenii Kitan</h1>
+          <h3 class="contact-info__sub-header">Beginner full stack developer</h3>
 
           <div class="contact_info_container fh">
-            <div class="contact-info__block"><a href="" rel="author" class="contact-info__item">
+            <div class="contact-info__block">
+              <a href="https://www.google.com/maps/@46.9522317,31.9799899,13.67z?authuser=0&entry=ttu" rel="author"
+                class="contact-info__item">
                 <div class="contact-info__item-icon-wrapper">
                   <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
                     <path
@@ -25,22 +27,42 @@
                     </path>
                   </svg>
                 </div>
-                <span>Lviv, Ukraine</span>
+                <span>Mykolaiv, Ukraine</span>
               </a>
             </div>
             <div class="contact-info__block contact-info__block--center">
-              <img class="contact-info__avatar" src="assets/avatar.png" alt="Avatar">
+              <img class="contact-info__avatar" src="assets/myAvatar.jpeg" alt="Avatar">
             </div>
-            <div class="contact-info__block"><a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author"
-                class="contact-info__item">
+            <div class="contact-info__block">
+              <a href="https://github.com/Ekit18" rel="author" class="contact-info__item">
                 <div class="contact-info__item-icon-wrapper">
-                  <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                    <path
-                      d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z">
-                    </path>
+                  <svg class="contact-info__item-icon" viewBox="2 0 43 43" xmlns="http://www.w3.org/2000/svg">
+                    <path class="cls-1"
+                      d="M24,2.5a21.5,21.5,0,0,0-6.8,41.9c1.08.2,1.47-.46,1.47-1s0-1.86,0-3.65c-6,1.3-7.24-2.88-7.24-2.88A5.7,5.7,0,0,0,9,33.68c-1.95-1.33.15-1.31.15-1.31a4.52,4.52,0,0,1,3.29,2.22c1.92,3.29,5,2.34,6.26,1.79a4.61,4.61,0,0,1,1.37-2.88c-4.78-.54-9.8-2.38-9.8-10.62a8.29,8.29,0,0,1,2.22-5.77,7.68,7.68,0,0,1,.21-5.69s1.8-.58,5.91,2.2a20.46,20.46,0,0,1,10.76,0c4.11-2.78,5.91-2.2,5.91-2.2a7.74,7.74,0,0,1,.21,5.69,8.28,8.28,0,0,1,2.21,5.77c0,8.26-5,10.07-9.81,10.61a5.12,5.12,0,0,1,1.46,4c0,2.87,0,5.19,0,5.9s.39,1.24,1.48,1A21.5,21.5,0,0,0,24,2.5" />
                   </svg>
                 </div>
-                <span>binary-studio</span>
+                <span>GitHub</span>
+              </a>
+              <a href="https://www.instagram.com/jackson_120104/" rel="author" class="contact-info__item">
+                <div class="contact-info__item-icon-wrapper">
+                  <svg class="contact-info__item-icon" viewBox="4 4 23 23" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M20.445 5h-8.891A6.559 6.559 0 0 0 5 11.554v8.891A6.559 6.559 0 0 0 11.554 27h8.891a6.56 6.56 0 0 0 6.554-6.555v-8.891A6.557 6.557 0 0 0 20.445 5zm4.342 15.445a4.343 4.343 0 0 1-4.342 4.342h-8.891a4.341 4.341 0 0 1-4.341-4.342v-8.891a4.34 4.34 0 0 1 4.341-4.341h8.891a4.342 4.342 0 0 1 4.341 4.341l.001 8.891z" />
+                    <path
+                      d="M16 10.312c-3.138 0-5.688 2.551-5.688 5.688s2.551 5.688 5.688 5.688 5.688-2.551 5.688-5.688-2.55-5.688-5.688-5.688zm0 9.163a3.475 3.475 0 1 1-.001-6.95 3.475 3.475 0 0 1 .001 6.95zM21.7 8.991a1.363 1.363 0 1 1-1.364 1.364c0-.752.51-1.364 1.364-1.364z" />
+                  </svg>
+                </div>
+                <span>Instagram</span>
+              </a>
+              <a href="https://www.facebook.com/profile.php?id=100017745696960" rel="author" class="contact-info__item">
+                <div class="contact-info__item-icon-wrapper">
+                  <svg class="contact-info__item-icon" viewBox="4 4 17 17" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M20 12.05C19.9813 10.5255 19.5273 9.03809 18.6915 7.76295C17.8557 6.48781 16.673 5.47804 15.2826 4.85257C13.8921 4.2271 12.3519 4.01198 10.8433 4.23253C9.33473 4.45309 7.92057 5.10013 6.7674 6.09748C5.61422 7.09482 4.77005 8.40092 4.3343 9.86195C3.89856 11.323 3.88938 12.8781 4.30786 14.3442C4.72634 15.8103 5.55504 17.1262 6.69637 18.1371C7.83769 19.148 9.24412 19.8117 10.75 20.05V14.38H8.75001V12.05H10.75V10.28C10.7037 9.86846 10.7483 9.45175 10.8807 9.05931C11.0131 8.66687 11.23 8.30827 11.5161 8.00882C11.8022 7.70936 12.1505 7.47635 12.5365 7.32624C12.9225 7.17612 13.3368 7.11255 13.75 7.14003C14.3498 7.14824 14.9482 7.20173 15.54 7.30003V9.30003H14.54C14.3676 9.27828 14.1924 9.29556 14.0276 9.35059C13.8627 9.40562 13.7123 9.49699 13.5875 9.61795C13.4627 9.73891 13.3667 9.88637 13.3066 10.0494C13.2464 10.2125 13.2237 10.387 13.24 10.56V12.07H15.46L15.1 14.4H13.25V20C15.1399 19.7011 16.8601 18.7347 18.0985 17.2761C19.3369 15.8175 20.0115 13.9634 20 12.05Z"
+                      />
+                  </svg>
+                </div>
+                <span>Facebook</span>
               </a>
             </div>
           </div>
