--- a/index.html
+++ b/index.html
@@ -100,18 +100,18 @@
               <h3 class="experiences__header">Experience</h3>
               <div class="experiences__company">
                 <div class="experiences__company-header">
-                  <span class="experiences__company-header-durability">For whole my life</span>
-                  <h3 class="experiences__company-header-name">BinaryStudio</h3>
+                  <span class="experiences__company-header-durability">2021-2025</span>
+                  <h3 class="experiences__company-header-name"></h3>
                 </div>
 
                 <div class="experiences__company-project">
-                  <span class="experiences__company-project-role">Binary Studio Cat</span>
-                  <h3 class="experiences__company-project-name">Hooman project</h3>
+                  <span class="experiences__company-project-role">Black Sea National University</span>
+                  <h3 class="experiences__company-project-name">Projects</h3>
                   <ul class="experiences__company-project-responsibilities">
-                    <li>Supported hoomans</li>
-                    <li>Slept all the time</li>
-                    <li>Lied on the keyboard</li>
-                    <li>Watched my hoomans working</li>
+                    <li>Laboratory works</li>
+                    <li>Term papers</li>
+                    <li>Startup</li>
+                    <li>Practical works</li>
                   </ul>
                 </div>
               </div>
