--- a/index.html
+++ b/index.html
@@ -122,22 +122,19 @@
                 <div class="additional-info__education">
                   <h3 class="additional-info__education-header">Education</h3>
                   <div class="additional-info__education-university">
-                    <span class="additional-info__education-university-durability">2021</span>
-                    <h3 class="additional-info__education-university-speciality">Cat track</h3>
-                    <p class="additional-info__education-university-name">Binary Studio Academy</p>
+                    <span class="additional-info__education-university-durability">2021-∞</span>
+                    <h3 class="additional-info__education-university-speciality">Software Engineering</h3>
+                    <p class="additional-info__education-university-name">School of the life</p>
                   </div>
                 </div>
 
                 <div class="additional-info__languages">
                   <h3 class="additional-info__languages-header">Languages</h3>
                   <p class="additional-info__languages-item">
-                    Meow dialect
+                    English(B2)
                   </p>
                   <p class="additional-info__languages-item">
-                    Ukrainian (understand)
-                  </p>
-                  <p class="additional-info__languages-item">
-                    English (don't understand)
+                    Ukrainian (native)
                   </p>
                 </div>
               </div>
