Deleted one extra div

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
               </svg>
             </div>
             <p class="intro_text">
-              Hola amigos! My name is Yevhenii and I am 19 y.o. Love coding and learning new technologies. Also i love cats and animals at all. At my free time i watch anime and read light-novels.
+              Hola amigos! My name is Yevhenii and I am 19 y.o. Love coding and learning new technologies. Also i love
+              cats and animals at all. At my free time i watch anime and read light-novels.
             </p>
           </div>
         </div>
@@ -142,7 +143,6 @@
           </div>
         </div>
       </div>
-    </div>
     </div>
   </main>
 </body>
